Fix overflow problem

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,10 @@ main {
   height: 100vh;
 }
 
+#__next {
+  overflow: auto;
+}
+
 html,
 body,
 div,
